2016-01-02 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Compilation for mingw, mingw32-w64, and mingw64-w64
	  works out of the box.
	* mingw*.mak: Deleted.

2015-12-27 Erwin Waterlander <waterlan@xs4all.nl>
	* man/man1/dos2unix.pod: Manual update. Binary file detection is not
	  foolproof.
	* Moved Git repository:
	  git clone git://git.code.sf.net/p/dos2unix/dos2unix

2015-12-22 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Split DEBUG=1 into DEBUG=1 and DEBUGMSG=1.
	  DEBUG=1 will add option -g to CFLAGS for debugging with gdb.
	  DEBUGMSG=1 makes dos2unix print extra messages about accessing the
	  file system.
	* Makefile: Use GNU standard variables INSTALL_DATA and INSTALL_PROGRAM
	  for installation.

2015-12-20 Erwin Waterlander <waterlan@xs4all.nl>
	* Moved Subversion repository to Git repository.
	  git clone git://git.code.sf.net/p/dos2unix/gitcode dos2unix-gitcode
	* Removed execution permission from text and source files.

2015-12-08 Erwin Waterlander <waterlan@xs4all.nl>
	* DEVEL.txt: New text file with information about why dos2unix is made
	  like it is.

2015-11-20 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 7.3.2
	* Makefile: Automatically detect if we are on MSYS 1 or 2.
	  Unicode support is disabled for MSYS 1.

2015-11-09 Sebastian Rasmussen <sebras@gmail.com>
	* po/sv.po: New Swedish translation of the messages.
	* man/sv/man1/dos2unix.po: New Swedish translation of the manual.

2015-11-08 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile, djgpp.mak, test/Makefile: Make it possible to run test
	  suite in DJGPP environment. $SHELL must point to sh or bash.

2015-11-07 Erwin Waterlander <waterlan@xs4all.nl>
	* test: Be able to run tests when UTF-16 support is not enabled (UCS=).

2015-11-05 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Fix option -iso. The -iso option was misinterpreted
	  as a corrupted -i option. Thanks to report of Ulf-Dietrich Braumann.
	* test/iso.t: Added two tests for option -iso.
